- finished first implementation of the repositories - adapted some model classes - fixed hashing algorithm - added Test for Card Repository - user registration now works in combination with database. First "complete" featire